added billling_ref to visit; doctor_id to invoice, ifh_number to patient

--- a/app/views/billings/_visit.html.erb
+++ b/app/views/billings/_visit.html.erb
@@ -22,6 +22,6 @@
 	  <%= visit.status_str %>
   	<% end %>	
 	</td>
-	<td><%= visit.export_file %></td>
+	<td><%= visit.billing_ref %></td>
 
 </tr>
