--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -13,13 +13,13 @@
           <th class="tbl_sm">Gen</th>
           <th class="tbl_sm">Age</th>
 	  <th class="tbl_sm">Type</th> 
+	  <th class="tbl_md">Last Visit </th>
+	  <th class="tbl_sm">Visits</th>
           <th>Health #</th>
 	  <th>Expiry</th> 
 	  <th>DOB</th> 
-	  <th>Last Visit </th>
-	  <th class="tbl_sm">Visits</th>
           <th>Phone</th>
-          <th>Chart</th>
+          <th class="tbl_sm">Chart</th>
  	  <th>Addr Label</th>
 	  <%=  "<th></th>".html_safe if current_user.admin? %>
       </tr>
