--- a/app/views/reports/_visit.html.erb
+++ b/app/views/reports/_visit.html.erb
@@ -11,6 +11,6 @@
 	<td><%= BILLING_TYPES.invert[visit.bil_type] %></td>
 	<td><%= sprintf("%.2f",visit.total_fee) %></td>
 	<td><%= visit.entry_by %></td>
-	<td><%= visit.export_file %></td>
+	<td><%= visit.billing_ref %></td>
 
 </tr>
