--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -26,6 +26,6 @@
 	  <td> <%= link_to "Edit",  edit_patient_visit_path(pat,visit) %> </td>
           <td> <%= link_to "Delete", patient_visit_path(pat,visit), method: :delete, data: { confirm: "Are you sure you want to delete visit #{visit.id} for patient #{pat.lname}?" } %> </td>
         <% else %>	
-	  <td> <%= link_to "Edit",  edit_patient_visit_path(pat,visit) %> </td>
+	  <td> <%= link_to "Label", label_patient_path(pat), method: 'get', target: "Label" %> </td>
 	<% end %>
 </tr>
