--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,55 +1,76 @@
 <%= form_for (@invoice) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   
+  <% doc_id = @invoice.doctor_id || (current_doctor.id if current_doctor) %>
   <h2>Invoice for patient <%= @patient.full_name %> </h2>
 
 <%= f.hidden_field :date, value: Date.today %>
 <%= f.hidden_field :patient_id, value: @patient.id %>
 
-<div class="col-md-11 col-sm-12 col-md-offset-3 col-sm-offset-1">
-
+<div class="col-md-11 col-sm-12 col-md-offset-4 col-sm-offset-1">
+	
+<!-- Row 1 -->
 <div class="row">
-  <div id="ins_provider" class="col-sm-6">
-  <%= f.label "Insurance Provider" %>
-  <%=  f.collection_select(:billto, Provider.all, :id, :name, prompt: 'Select Insurance Provider')  %>
+  <div class="col-sm-3">
+  <%= f.label "Doctor/Clinic" %>
+  <%= f.collection_select(:doctor_id, get_active_doctors, :id, :lname, selected: doc_id, include_blank: 'Clinic') %>
   </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
-  <%= f.label 'Description' %>
-  <%= f.text_field :notes %>
-  </div>
-</div>
-
-<div class="row">
   <div class="col-sm-2">
   <%= f.label :'Amount' %>
   <%= f.number_field :amount %>
   </div>
 </div>
 
+<!-- Row 2 -->
+<div class="row">
+  <div id="ins_provider" class="col-sm-5">
+  <%= f.label "Insurance Provider" %>
+  <%=  f.collection_select(:billto, Provider.all, :id, :name, prompt: 'Select Insurance Provider')  %>
+  </div>
+</div>
+
+<!-- Row 3 -->
+<div class="row">
+  <div class="col-sm-5">
+  <%= f.label 'Description' %>
+  <%= f.text_field :notes %>
+  </div>
+</div>
+
+<!-- Row 4 -->
 <% if action_name == 'edit' %>
 <div class="row">
-<div class="col-sm-1">
- <%= f.label :paid? %>
- <%= f.check_box :paid, value: 'false'  %>
-</div>
+  <div class="col-sm-1">	
+  <%= f.label :paid? %>
+  </div>
+  <div class="col-sm-1">
+  <%= f.check_box :paid, value: 'false'  %> 
+  </div>
 </div>
 <% end %>
 
+<!-- Row 5 -->
 <div class="row">
   <div class="spacer-20"></div>
-  <div class="col-sm-10 col-md-6">
+  <div class="col-sm-10 col-md-5">
 <% if action_name == 'edit' %>
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   <% else %>  
   <%= f.submit yield(:button_text), class: "btn btn-primary", formtarget: 'Form' %>
 <% end %>
   </div>
-</div>
-</div>
+  </div>
 
 <% end %>
+
+<!-- Row 6 -->
+<div class="row">
+  <div class="spacer-10"></div>
+  <div class="col-sm-10 col-md-5">
+    <%= button_to 'Back', invoices_path, class: "btn btn-primary", method: :get %>
+  </div>
+</div>
+
+</div>
 
 
