--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -4,8 +4,9 @@
   <thead>
       <tr>
 	  <th><%= sortable 'id', 'Invoice' %> </th>
-	  <th class="tbl_lg"><%= sortable 'billto', 'Bill To' %></th>
 	  <th class="tbl_md"><%= sortable 'patient_id', 'Patient' %></th>
+	  <th class="tbl_md"><%= sortable 'doctor_id', 'Doctor' %></th>
+	  <th class="tbl_lg"><%= sortable 'billto', 'Bill To' %></th>
 	  <th> <%= sortable 'date' %></th>
 	  <th> <%= sortable 'amount' %></th>
 	  <th class="tbl_lg">Description</th>
