--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -3,18 +3,18 @@
 <table class="tbl table-hover"> 
   <thead>
       <tr>
-          <th>Claim #</th>
+          <th><%= sortable 'claim_no', 'Claim #' %></th>
 	  <th>Svc Date </th>
-          <th>Provider</th>
+          <th><%= sortable 'provider_no', 'Provider' %></th>
  	  <th class='tbl_sm'>Svcs</th>
  	  <th>Submitted</th>
  	  <th>Paid</th>
-          <th>Acc #</th>
+          <th><%= sortable 'accounting_no', 'Acc #' %></th>
 	  <th>HC#</th> 
           <th class='tbl_sm'>Prov</th>
-	  <th class='tbl_sm'>Type</th> 
+	  <th class='tbl_sm'><%= sortable 'pmt_pgm', 'Type' %></th> 
 	  <th>RA file</th>
-          <th>Date paid</th>
+          <th><%= sortable 'date_paid', 'Date Paid' %></th>
 	  <th>Visit</th> 
       </tr>
   </thead>
