--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -4,8 +4,9 @@
   <thead>
       <tr>
           <th>Report#</th>
-          <th>Doctor</th>
           <th>Type</th>
+          <th>Doctor</th>
+          <th>Timeframe</th>
           <th>Date</th>
           <th>To</th>
           <th>File</th>
