--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -44,14 +44,15 @@
 
 <div class="bottom_buttons ">
   <%= will_paginate @visits, class: "btn" %>
-  <% if BILLING_FORMAT == 'EDT' %>
+
+  <% if date == Date.today || date.blank? || current_user.admin? %>
+    <% if BILLING_FORMAT == 'EDT' %>
          <%= button_to "Export Claim File (EDT)", billings_export_edt_path, class: "btn btn-primary col-md-12", method: 'post', params: {date: date}  %>
-  <% elsif BILLING_FORMAT == 'CSV' %>
-	  <%= button_to "Export Claim File (CSV)", billings_export_csv_path, class: "btn btn-primary col-md-12", method: 'post', params: {date: date}  %>
-  <% else %>
-	  <%= button_to "Send claims to Cab.md", billings_export_cabmd_path, class: "btn btn-primary col-md-12", method: 'post', params: {date: date}   %>
-	  &nbsp;&nbsp;
-	  <!--   button_to "Export Claims File (CSV)", billings_export_csv_path, class: "btn btn-primary col-md-12", method: 'post', params: {date: date}  -->
-     <% end %>
+    <% elsif BILLING_FORMAT == 'CSV' %>
+	 <%= button_to "Export Claim File (CSV)", billings_export_csv_path, class: "btn btn-primary col-md-12", method: 'post', params: {date: date}  %>
+    <% elsif BILLING_FORMAT == 'CABMD' %>
+	 <%= button_to "Send claims to Cab.md", billings_export_cabmd_path, class: "btn btn-primary col-md-12", method: 'post', params: {date: date}   %>
+    <% end %>
+  <% end %>
 </div>
 
