--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -50,9 +50,12 @@
 
 <p>
 <div class="row">
+ <% if @visit.status < BILLED || current_user.admin? %>
  <div class="col-sm-3 col-md-2">
   <%= button_to "Edit Visit", edit_patient_visit_path(@patient), class: "btn btn-primary", :method => "get" %>
  </div>
+ <% end %>
+
  <div class="col-sm-3 col-md-2">
  <%= button_to "Print Visit Form", visitform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "Form"  %>
  </div>
