--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,13 +1,12 @@
 <%= form_for @report do |f| %>
 		
-<% doc_id = current_doctor.id if current_doctor %>
 <%= render 'shared/error_messages', object: f.object %>
 
-<% 
+<%
+        doc_id = current_doctor.id if current_doctor
         disabled = []
         disabled = [DAILY_REPORT..DRANGE_REPORT] if @report.rtype = PC_REPORT   # Paid Claims
 %>
-
   
 <!-- Row 1 -->
 <div class="row">
@@ -130,13 +129,16 @@ $(document).ready(function () {
 var rtype = document.getElementById("report_rtype");
 //  alert(rtype.value);
 $(rtype).change(function () {
+  var rt = document.getElementById('report_timeframe');
   var tframe = document.getElementById('report_timeframe').getElementsByTagName("option");
   if (rtype.value == 'PC') {
+	$(rt).prop('selectedIndex',4);  
         tframe[0].disabled = true;
         tframe[1].disabled = true;
         tframe[2].disabled = true;
         tframe[3].disabled = true;
   } else {
+	$(rt).prop('selectedIndex',0);  
         tframe[0].disabled = false;
         tframe[1].disabled = false;
         tframe[2].disabled = false;
