--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -27,8 +27,8 @@
 	  </th>
 
 	  <th class="tbl_lmd">Patient</th>
-          <th class="tbl_md">Health #</th>
-          <th class="tbl_sm">Ver</th>
+	  <th class="tbl_sm">Type</th>
+          <th class="tbl_md">HC/IFH #</th>
           <th class="tbl_md">Diagnosis</th>
           <th class="tbl_lmd">Procedure(s)</th>
           <th class="tbl_lsm">HCPSvcs</th>
