--- a/app/views/layouts/_ref.html.erb
+++ b/app/views/layouts/_ref.html.erb
@@ -1,7 +1,7 @@
 <% menu_items = %w(procedures diagnoses providers drugs vaccines) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-  Reference <b class="caret"></b>
+  Ref <b class="caret"></b>
   </a>
     <ul class="dropdown-menu">
       <li> <%= link_to "Procedures", procedures_path, method: :get %> </li>
