--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -15,12 +15,12 @@
 	  <th class="tbl_sm">Type</th> 
 	  <th class="tbl_md">Last Visit </th>
 	  <th class="tbl_sm">Visits</th>
-          <th>Health #</th>
+          <th>HC/IFH #</th>
 	  <th>Expiry</th> 
 	  <th>DOB</th> 
           <th>Phone</th>
           <th class="tbl_sm">Chart</th>
- 	  <th>Addr Label</th>
+ 	  <th></th>
 	  <%=  "<th></th>".html_safe if current_user.admin? %>
       </tr>
   </thead>
