--- a/app/views/procedures/_procedure.html.erb
+++ b/app/views/procedures/_procedure.html.erb
@@ -5,6 +5,7 @@
 	<td><%= procedure.cost %></td> 
 	<td><%= procedure.unit %></td> 
 	<td><%= procedure.diag_req %></td> 
+	<td><%= procedure.ref_req %></td> 
 	<td><%= procedure.eff_date %></td> 
 	<td><%= procedure.active %></td> 
 	<td>
