--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,6 +49,7 @@
 <li class="<%= 'active' if controller_name == 'billings' %>"><%= link_to "Billing", billings_path %></li>
 <%= render 'layouts/docs' %>
 <%= render 'layouts/ref' %>
+<%= render 'layouts/forms' %>
 <%= render 'layouts/admin' if current_user.admin?  %>
 <% else %>
           <li><%= link_to "Log in", login_path %></li>
