--- a/app/views/procedures/new.html.erb
+++ b/app/views/procedures/new.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, 'New Diagnostic Code') %>
+<% provide(:title, 'New Procedure') %>
 <% provide(:button_text, 'Save') %>
-<h1>New Procedure </h1>
+<h1>New Procedure</h1>
 
 <div class="col-md-8 col-sm-12 col-md-offset-3 col-sm-offset-3">
     <%= render 'form' %>
