--- a/app/views/paystubs/_form.html.erb
+++ b/app/views/paystubs/_form.html.erb
@@ -42,6 +42,27 @@
 
 <!-- Row 4 -->
 <div class="row">
+<div class="col-sm-2 col-sm-offset-4" >
+  <%= f.label :MHO_deduction %>
+  <%= f.number_field :mho_deduction, value: 0, step: :any %>
+</div>
+</div>
+
+<!-- Row 4 opt -->
+<% if current_user.admin?  %>
+<div class="row">
+<div class="col-sm-2 col-sm-offset-4" >
+  <%= f.label :month %>
+  <%= select_month Time.now, value: Time.now.month  %>
+</div>
+</div>
+<% end %>
+
+
+<div class="spacer-20"></div>
+
+<!-- Row 5 -->
+<div class="row">
 <div class="col-sm-4 col-sm-offset-4">
   <%= f.submit yield(:button_text), class: "btn btn-primary" %> <!--,  :method => "patch", data: { confirm: "Are you sure you want to replace paystub for this doctor/month?" } -->
 </div>
@@ -50,7 +71,7 @@
 <% end %>
 
 <div class='spacer-10'></div>
-<!-- Row 5 -->
+<!-- Row 6 -->
 <div class="row">
 <div class="col-sm-4 col-sm-offset-4">
   <%= button_to 'Back', paystubs_path, class: "btn btn-primary",  method: 'get' %>
