Utility script to reconcile CAB.md report daily totals with our submits

--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -11,7 +11,7 @@
   elsif @visit.status == ERROR 
      disabled = ( READY..CANCELLED ).to_a
   elsif @visit.billing_ref.present?
-     disabled = [ARRIVED,ASSESSED,READY,CANCELLED]
+     disabled = [ARRIVED,READY,CANCELLED]
   elsif @visit.hcp_proc_codes.present? 
     if @insured
        disabled = [BILLED,PAID]
