--- a/app/views/procedures/_form.html.erb
+++ b/app/views/procedures/_form.html.erb
@@ -78,17 +78,17 @@
     </div>
 
     <div class="col-sm-1">
-          <%= f.label :diag? %>
+          <%= f.label :'Requires Diagnosis?' %>
           <%= f.check_box :diag_req %>
     </div>
 
     <div class="col-sm-1">
-          <%= f.label :ref? %>
+          <%= f.label :'Requires Referral?' %>
           <%= f.check_box :ref_req %>
     </div>
 
     <div class="col-sm-1">
-          <%= f.label :active? %>
+          <%= f.label :'Active procedure?' %>
           <%= f.check_box :active  %>
     </div>
 
