--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -8,6 +8,7 @@
  <li><%= link_to "Doctors", doctors_path %> </li>
  <li><%= link_to "Export Files", export_files_path %> </li>
  <li><%= link_to "Claims", claims_path  %> </li> 
+ <li><%= link_to "Budget", budget_path  %> </li> 
  <li><%= link_to "Logout", logout_path, method: :delete %></li>
 </ul>
 </li>
