--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@patient, @visit]  do |f| %> 
+<%= form_for [@patient, @visit],  :html => {:multipart => true} do |f| %> 
   <%= render 'shared/error_messages', object: f.object %>
 
 <% 
@@ -174,6 +174,17 @@
   </div>
 </div>
 
+<!-- Row 6: upload docs -->
+<div class="row">
+  <div class="col-sm-12"> 
+    <%= f.label :documents %>
+      <% @visit.documents.each do |d| %>
+      <% next unless d.document.file.present? %>
+      <%= link_to d.document.file.filename, d.document.url.to_s %>
+      <% end %>
+    <%= f.file_field :document %>
+  </div>
+</div>
 
 <!-- Row 7: Notes, submit button -->
 <div class="row">
