--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -36,7 +36,7 @@
 <b>Amount Paid </b>: <%= sprintf '$%.2f', @visit.amount %>
 <% end %>
 <% if @visit.documents.present? %>
-<b>Attachments</b>: 
+<b>Documents</b>: 
 <% @visit.documents.each do |d| %>
    <% next unless d.document.file.present? %>
    <%= link_to d.document.file.filename, d.document.url.to_s %>
