--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -452,4 +452,17 @@ table.pretty {
    background-color: blue;
 }
 
+/* Make Select2 boxes match Bootstrap3 heights: */
+.select2-selection__rendered {
+  line-height: 24px !important;
+}
+
+.select2-selection {
+  height: 24px !important;
+}
+
+.select2-selection__arrow {
+    height: 22px !important;
+}
+
     
