--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -52,7 +52,7 @@
   <div class="col-sm-2">
   <%= f.label "Service" %>
   <%= f.collection_select :proc_code, @procedures, :code, :code, prompt: 'Select', include_blank: 'None' %> <!--#, selected: @visit.proc_code || 'A007A'  -->
-  <%# f.hidden_field(:fee, id: :fee) %>
+  <!--  f.hidden_field(:fee, id: :fee) -->
   </div>
 
   <div class="col-sm-2">
